EffSendTitle & ExprDifference